# data-structures

./: README.md
cpp/: CMakeLists.txt  main.cpp
cpp/array/student challenge/: 2.cpp  4.cpp
cpp/graph/traversal/: Graph.cpp  Graph.h
cpp/hashing/chaining/: ChainHashing.cpp
cpp/heap/: Heap.cpp  Heap.h
cpp/linked list/problems/: MergeTwoSortedLL.cpp  SortedLL.cpp
cpp/linked list/types/circular/: CircularLL.cpp
cpp/linked lists/problems/: ReverseLLRecur.cpp  SortedLL.cpp
cpp/linked lists/types/circular/: CircularLL.h
cpp/linked lists/types/circular doubly/: CDoublyLL.cpp  CDoublyLL.h
cpp/linked lists/types/doubly/: DoublyLL.cpp  DoublyLL.h
cpp/linked lists/types/singly/: SinglyLL.cpp  SinglyLL.h
cpp/matrices/diagonal matrix/: Diagonal.cpp  Diagonal.h
cpp/matrices/lower triangular matrix/: LTMatrix.cpp  LTMatrix.h
cpp/matrices/sparse matrix/array/: SparseArr.cpp  SparseArr.h
cpp/matrices/sparse matrix/linked list/: SparseLL.cpp  SparseLL.h
cpp/matrices/symmetric matrix/: Symmetric.cpp  Symmetric.h
cpp/matrices/toeplitz matrix/: Toeplitz.cpp  Toeplitz.h
cpp/matrices/tridiagonal matrix/: Tridiagonal.cpp  Tridiagonal.h
cpp/matrices/upper triangular matrix/: UTMatrix.cpp  UTMatrix.h
cpp/polynomial/array/: PolyArr.cpp  PolyArr.h
cpp/polynomial/linked list/: PolyLL.cpp  PolyLL.h
cpp/queues/array/circular/: CQueue.cpp  Cqueuee.h
cpp/queues/array/linear/: Queue.cpp  Queue.h
cpp/queues/linked list/: QueueLL.cpp  QueueLL.h
cpp/queues/two stacks/: QTwoStacks.cpp  QTwoStacks.h
cpp/recursion/: IndirectRecursion.cpp  NCR.cpp  NestedRecursion.cpp  Power.cpp  StaticGlobal.cpp  SumOfN.cpp  TailHeadRecursion.cpp  TowerOfHanoi.cpp  TreeRecursion.cpp
cpp/sorting/: BucketSort.cpp  RadixSort.cpp
cpp/stack/expression eval/: ExprEvaluator.cpp  ExprEvaluator.h
cpp/stack/implementation/array/: StackArr.cpp  StackArr.h
cpp/stack/implementation/linked list/: StackLL.cpp
cpp/trees/avl tree/: AVL.cpp  AVL.h
cpp/trees/binary search tree/: BST.cpp  BST.h
cpp/trees/binary tree/: Tree.cpp  Tree.h
